Fix misaligned svg, button font-size inherit

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -94,10 +94,10 @@ a:hover {
 }
 
 svg {
-	height: 2em;
+	height: 1.5em;
 	margin-right: calc(var(--spacing) / 2);
 	max-width: 100%;
-	width: 2em;
+	width: 1.5em;
 }
 
 s-svg {
@@ -128,6 +128,7 @@ button {
 	border: 0;
 	color: inherit;
 	cursor: pointer;
+	font-size: inherit;
 }
 
 button::after {
